fix: center align navbar items, remove excess padding

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body {
 header {
   color: #fff;
   background-color: #482880;
-  padding: 33px 0 25px 15px;
+  padding: 10px 0 10px 20px;
 }
 
 header p {
@@ -17,6 +17,7 @@ header p {
 header .wrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 header h1 {
@@ -112,7 +113,8 @@ button {
 .navbar-content {
     display: flex;
     width: 200px;
-    justify-content:flex-end;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .user-profile {
